--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Lato&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
@@ -24,10 +24,22 @@
     <div class="title text-center">
       <h1>Pow.</h1>
     </div>
-    <div class= "navbar">
-          <a href="#">Sale</a>
-          <a href="#">Colección</a>
-          <a href="#">Gift Cards</a>
+    <div class="d-flex align-items-center justify-content-between">
+      <div class="d-flex justify-content-end navbar-icons-left">
+        <i class="fas fa-search navbar-icon"></i>
+        <i class="fas fa-user navbar-icon"></i>
+        <i class="fas fa-shopping-cart navbar-icon"></i>
+      </div>
+      <div class="navbar d-flex justify-content-center">
+            <a href="#">Sale</a>
+            <a href="#">Colección</a>
+            <a href="#">Gift Cards</a>
+      </div>
+      <div class="d-flex justify-content-end navbar-icons">
+        <i class="fas fa-search navbar-icon"></i>
+        <i class="fas fa-user navbar-icon"></i>
+        <i class="fas fa-shopping-cart navbar-icon"></i>
+      </div>
     </div>
   </div>
   <div class="container">
@@ -60,14 +72,6 @@
         <div class="items">
           <div class="headers">
             <p>ART.</p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <p>Talle</p>
             <p>Cant.</p>
             <p>Precio</p>
