--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="pre-header text-center">
-    <p>12 cuotas sin interés + Envío gratis</p>
+    <p>12 Cuotas sin interés + Envío gratis</p>
   </div>
   <div class="header">
     <div class="title text-center">
@@ -69,41 +69,62 @@
             </div>
           </div>
         </div>
-        <div class="items">
-          <div class="headers">
-            <p>ART.</p>
-            <p>Talle</p>
-            <p>Cant.</p>
-            <p>Precio</p>
-            <p>Borrar</p>
+        <div class="items container px-0">
+          <div class="headers row align-items-center">
+            <div class="col-4 d-flex justify-content-start">
+              <p>ART.</p>
+            </div>
+            <div class="col-2 text-center">
+              <p>Talle</p>
+            </div>
+            <div class="col-2 text-center">
+              <p>Cant.</p>
+            </div>
+            <div class="col-2 text-center">
+              <p>Precio</p>
+            </div>
+            <div class="col-2 d-flex justify-content-end">
+              <p>Borrar</p>
+            </div>
           </div>
           <span class="border-bottom"></span>
-          <div class="item d-flex align-items-center">
-            <div class="card-item">
-              <div class="img">
-                <img src="assets/images/dress.jpg" alt="Vestido" width="93" height="140">
-              </div>
-              <div class="details">
-                <p>Saco Cove Long</p>
-                <p class="small-details">Color: Rojo</p>
-              </div>
-            </div>
-            <p>44</p>
-            <div class="cantidad">
-              <div class="d-flex justify-content-between align-items-center">
-                <span>-</span>
-                <span>1</span>
-                <span>+</span>
+          <div class="item row align-items-center">
+            <div class="col-4 d-flex justify-content-start">
+              <div class="card-item">
+                <div class="img">
+                  <img src="assets/images/dress.jpg" alt="Vestido" width="93" height="140">
+                </div>
+                <div class="details">
+                  <p>Saco Cove Long</p>
+                  <p class="small-details">Color: Rojo</p>
+                </div>
               </div>
             </div>
-            <div class="price d-flex">
-              <p class="old-price px-2">$9.895</p>
-              <p class="new-price">$7.421</p>
+            <div class="col-2 text-center">
+              <p>44</p>
             </div>
-            <i class="far fa-trash-alt"></i>
+            <div class="col-2">
+              <div class="cantidad">
+                <div class="d-flex justify-content-evenly align-items-center">
+                  <span class="border-end"><i class="fas fa-minus px-2"></i></span>
+                  <span class="px-2">1</span>
+                  <span class="border-start"><i class="fas fa-plus px-2"></i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="price d-flex">
+                <p class="old-price px-2">$9.895</p>
+                <p class="new-price">$7.421</p>
+              </div>
+            </div>
+            <div class="col-2 d-flex justify-content-end">
+              <i class="far fa-trash-alt"></i>
+            </div>
           </div>
           <span class="border-bottom"></span>
-          <div class="item d-flex align-items-center">
+          <div class="item row align-items-center">
+            <div class="col-4 d-flex justify-content-start">
               <div class="card-item">
                 <div class="img">
                   <img src="assets/images/jean.jpg" alt="Jean" width="93" height="140">
@@ -113,18 +134,27 @@
                   <p class="small-details">Color: Azul oscuro</p>
                 </div>
               </div>
-            <p>44</p>
-            <div class="cantidad">
-              <div class="d-flex justify-content-between align-items-center">
-                <span>-</span>
-                <span>1</span>
-                <span>+</span>
+            </div>
+            <div class="col-2 text-center">
+              <p>44</p>
+            </div>
+            <div class="col-2">
+              <div class="cantidad">
+                <div class="d-flex justify-content-evenly align-items-center">
+                  <span class="border-end"><i class="fas fa-minus px-2"></i></span>
+                  <span class="px-2">1</span>
+                  <span class="border-start"><i class="fas fa-plus px-2"></i></span>
+                </div>
               </div>
             </div>
-            <div class="price d-flex">
-              <p class="new-price-2">$7.421</p>
+            <div class="col-2 text-center">
+              <div class="price d-flex justify-content-center">
+                <p class="new-price-2">$7.421</p>
+              </div>
             </div>
-            <i class="far fa-trash-alt"></i>
+            <div class="col-2 d-flex justify-content-end">
+              <i class="far fa-trash-alt"></i>
+            </div>
           </div>
         </div>
       </div>
