--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
             <div class="col-2">
               <div class="cantidad">
                 <div class="d-flex justify-content-evenly align-items-center">
-                  <span class="border-end"><i class="fas fa-minus px-2"></i></span>
-                  <span class="px-2">1</span>
-                  <span class="border-start"><i class="fas fa-plus px-2"></i></span>
+                  <span class="border-end"><a href="#" class="btn-minus menos"><i class="fas fa-minus px-2"></i></a></span>
+                  <span class="px-2 qty">0</span>
+                  <span class="border-start"><a href="#" class="btn-minus mas"><i class="fas fa-plus px-2"></i></a></span>
                 </div>
               </div>
             </div>
             <div class="col-2">
               <div class="price d-flex">
-                <p class="old-price px-2">$9.895</p>
-                <p class="new-price">$7.421</p>
+                <p class="old-price px-2">$9895</p>
+                <span class="new-price">$</span><p class="new-price" id="price">7421</p>
               </div>
             </div>
             <div class="col-2 d-flex justify-content-end">
@@ -141,15 +141,15 @@
             <div class="col-2">
               <div class="cantidad">
                 <div class="d-flex justify-content-evenly align-items-center">
-                  <span class="border-end"><i class="fas fa-minus px-2"></i></span>
-                  <span class="px-2">1</span>
-                  <span class="border-start"><i class="fas fa-plus px-2"></i></span>
+                  <span class="border-end"><a href="#" class="btn-minus menos"><i class="fas fa-minus px-2"></i></a></span>
+                  <span class="px-2 qty">0</span>
+                  <span class="border-start"><a href="#" class="btn-minus mas"><i class="fas fa-plus px-2"></i></a></span>
                 </div>
               </div>
             </div>
             <div class="col-2 text-center">
               <div class="price d-flex justify-content-center">
-                <p class="new-price-2">$7.421</p>
+                <p class="new-price-2">$7421</p>
               </div>
             </div>
             <div class="col-2 d-flex justify-content-end">
@@ -164,8 +164,8 @@
             <p class="sub-items-title">Resumen</p>
             <div class="sub-items-subtitle">
               <div class="subtotal">
-                <p>Subtotal</p>
-                <p>$8514</p>
+                <p>Subtotal ($) </p>
+                <p id="subtotal-sum">0</p>
               </div>
               <div class="subtotal">
                 <p>Envío</p>
@@ -173,8 +173,8 @@
               </div>
             </div>
             <div class="total">
-              <p>Total</p>
-              <p>$8514</p>
+              <p>Total ($)</p>
+              <p id="total-sum">0</p>
             </div>
           </div>
         </div>
@@ -201,5 +201,6 @@
       <p>Pow</p>
     </div>
   </div>
+  <script src="assets/script.js"></script>
 </body>
 </html>
